# vectordb

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
benches/: phase1_benchmarks.rs  queries.rs  tensor_ops.rs
data/smoke_db_final/datasets/: users.meta.json  users.parquet
docs/: ARCHITECTURE.md  BENCHMARKS.md  DSL_REFERENCE.md  FromVectorDB-ToLinalDB.md  MODULAR_PLAN.md  NewFeatures.md  PHASE0_RESULTS.md  PHASE1_BENCHMARKS.md  PROGRESS_SUMMARY.md  Performance_improvement_plan.md  TENSOR_FIRST_PERFORMANCE.md  TEST_COVERAGE.md  Tasks_implementations.md
examples/: benchmark.lnl  end_to_end.lnl  example.lnl  features_demo.lnl  features_demo.vdb  hardening_test.vdb  matrix_operations.tdb  metadata_demo.vdb  smoke_test.vdb  test_matrix_math.lnl  test_multiline.lnl  test_persistence.lnl
src/: lib.rs  main.rs
src/core/: dataset.rs  mod.rs  storage.rs  tensor.rs  tuple.rs  value.rs
src/core/index/: hash.rs  mod.rs  vector.rs
src/core/store/: dataset_store.rs  mod.rs  tensor_store.rs
src/dsl/: error.rs  mod.rs
src/dsl/handlers/: dataset.rs  explain.rs  index.rs  instance.rs  introspection.rs  metadata.rs  mod.rs  operations.rs  persistence.rs  search.rs  tensor.rs
src/engine/: context.rs  db.rs  error.rs  kernels.rs  mod.rs  operations.rs
src/query/: logical.rs  mod.rs  physical.rs  planner.rs
src/server/: mod.rs
src/utils/: parsing.rs
tests/: add_column_test.rs  aggregation_feature_test.rs  avg_aggregation_test.rs  cli_hardening_test.rs  computed_columns_test.rs  context_integration_tests.rs  dataset_integration.rs  dot_notation_direct_test.rs  dsl_dataset_complete.rs  dsl_matrix_ops.rs  dsl_scenarios.rs  dsl_show_commands.rs  engine_matrix_ops.rs  engine_scenarios.rs  examples_integration.rs  expression_indexing_test.rs  indexing_feature_test.rs  indexing_test.rs  instance_management_test.rs  lazy_columns_test.rs  matrix_operations.rs  persistence_test.rs  planner_feature_test.rs  query_optimization_test.rs  server_test.rs  show_schema_test.rs  stack_test.rs  zero_copy_tests.rs
