[package]
name = "vector-db-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
arrow = "53.3.0"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
parquet = { version = "53.3.0", features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.19"
toon-format = "0.4.0"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
