[package]
name = "linal"
version = "0.1.5"
edition = "2021"
description = "In-memory linear algebra engine for vectors, matrices and tensors"

[[bin]]
name = "linal"
path = "src/main.rs"

[dependencies]
arrow = "53.3.0"
axum = "0.7.9"
clap = { version = "4.5.53", features = ["derive"] }
parquet = { version = "53.3.0", features = ["arrow"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.19"
rustyline = "14.0.0"
colored = "2.1.0"
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
toon-format = "0.4.0"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "queries"
harness = false
